changed contrast issue

--- a/index.css
+++ b/index.css
@@ -62,7 +62,7 @@ main {
   font-size: 18px;
   text-align: center;
   width: 100%;
-  background-color: rgba(255, 255, 255, .70);
+  background-color: rgba(255, 255, 255, .75);
   display: flex;
   flex-direction: column;
   align-items: center;
